--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-window": "^1.8.10",
+    "react-virtualized-auto-sizer": "^1.0.20",
     "recharts": "^2.10.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-window": "^1.8.8",
+    "@types/react-virtualized-auto-sizer": "^1.0.4",
     "@vitejs/plugin-react": "^2.0.1",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
