--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
     "react-virtualized-auto-sizer": "^1.0.20",
     "react-window": "^1.8.10"
   },
